// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test component: DropdownMenu should render properly 1`] = `
<div
  className="navSelector"
>
  <div
    className="currentBlock"
    onClick={[Function]}
  >
    <i
      className="currentIcon controller-icon"
    />
    <span
      className="currentText"
    >
      Controller
    </span>
    <i
      className="anticon anticon-down arrowWithText"
      style={Object {}}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="down"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </i>
  </div>
</div>
`;

exports[`test component: DropdownMenu should render properly WITHOUT seesion storage: WITHOUT seesion storage 1`] = `
<div
  className="navSelector"
>
  <div
    className="currentBlock"
    onClick={[Function]}
  >
    <i
      className="currentIcon controller-icon"
    />
    <span
      className="currentText"
    >
      Controller
    </span>
    <i
      className="anticon anticon-down arrowWithText"
      style={Object {}}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="down"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </i>
  </div>
</div>
`;

exports[`test function literally render should render properly: WITH allApps 1`] = `
<div
  className="navSelector"
>
  <div
    className="noTextBlock"
    onClick={[Function]}
  >
    <i
      className="currentIcon controller-icon"
    />
    <i
      className="anticon anticon-down arrowNoText"
      style={Object {}}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="down"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </i>
  </div>
</div>
`;
